--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <!-- Footer -->
         <footer class="footer">
             <p>Data provided by Yahoo Finance • Auto-refreshes every 30 seconds</p>
+            <p class="online-status" id="onlineStatus">🌐 Live Data</p>
             <p class="offline-indicator hidden" id="offlineIndicator">📴 Offline Mode - Showing cached data</p>
         </footer>
     </div>
