--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="error-card">
                 <h3>⚠️ Error Loading Data</h3>
                 <p id="errorMessage">Unable to fetch market data. Please check your connection and try again.</p>
-                <button class="btn btn--primary" onclick="window.app.fetchData()">Retry</button>
+                <button class="btn btn--primary" onclick="window.app.fetchData(true)">Retry</button>
             </div>
         </div>
 
